--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,5 +5,6 @@
     [todos]="todos"
     (toggle)="toggleTodo($event)"
     (delete)="deleteTodo($event)"
+    (reorder)="reorderTodos($event)"
   />
 </div>
