--- a/src/app/components/todo-list/todo-list.css
+++ b/src/app/components/todo-list/todo-list.css
@@ -32,17 +32,38 @@ input[type="checkbox"] {
 span {
   flex-grow: 1;
 }
+
+input {
+  padding: 0.5rem 0.8rem;
+  border-radius: 0.3rem;
+}
+
+form {
+  display: flex;
+  gap: 0.5rem;
+  margin-right: 1.8rem;
+}
+
 small {
   color: #666;
   margin-right: 1rem;
 }
-button {
+.close{
   background: transparent;
   border: none;
   color: #f44336;
   font-size: 1.5rem;
   cursor: pointer;
 }
+
+.edit{
+  background: transparent;
+  border: none;
+  color: gray;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
 .empty {
   text-align: center;
   color: #888;
