--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,13 +1,28 @@
 .container {
-    max-width: 600px;
-    margin: 2rem auto;
-    margin-top: 8rem;
-    padding: 1rem;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  }
-  h1 {
-    text-align: center;
-    color: #3f51b5;
-  }
+  max-width: 600px;
+  min-width: 30rem;
+  margin: 2rem;
+  margin-top: 8rem;
+  padding: 1rem;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+h1 {
+  text-align: center;
+  color: #3f51b5;
+  margin-bottom: 4rem;
+}
+
+.grid {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+}
+
+.tag {
+  border-radius: 0.5rem;
+  border: 1.5px solid hsl(0, 4%, 80%);
+  padding: 0.5rem 1rem;
+}
