--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,21 @@
-<div class="container">
-  <h1>Angular 20 Todo App</h1>
-  <todo-form (todoAdd)="addTodo($event)" />
-  <todo-list
-    [todos]="todos"
-    (toggle)="toggleTodo($event)"
-    (delete)="deleteTodo($event)"
-    (reorder)="reorderTodos($event)"
-  />
+<div class="grid">
+  @if (selectedTodo()) {
+  <div class="container">
+    <h1>{{ selectedTodo()?.title }}</h1>
+    <span class="tag">{{ selectedTodo()?.tag }}</span>
+    <p>{{ selectedTodo()?.description }}</p>
+  </div>
+  }
+  <div class="container">
+    <h1>Angular 20 Todo App</h1>
+    <!-- <todo-form (todoAdd)="addTodo($event)" /> -->
+    <todo-form (loadTodos)="loadTodos()" />
+    <todo-list
+      [todos]="todos()"
+      (toggle)="toggleTodo($event)"
+      (delete)="deleteTodo($event)"
+      (reorder)="reorderTodos($event)"
+      (selectTodo)="selectTodo($event)"
+    />
+  </div>
 </div>
