--- a/src/app/components/todo-form/todo-form.css
+++ b/src/app/components/todo-form/todo-form.css
@@ -1,20 +1,53 @@
 form {
   display: flex;
+  flex-direction: column;
   margin-bottom: 2rem;
+  gap: 1rem;
 }
+
+.title-input {
+  display: flex;
+  gap: 2;
+}
+
 input {
   flex-grow: 1;
-  padding: 0.75rem;
-  border: 2px solid #e0e0e0;
-  border-radius: 4px;
-  font-size: 1rem;
+  padding: 0.8rem 1rem;
+  margin-right: 0.3rem;
+  border-radius: 0.5rem;
+  border: 1.5px solid hsl(0, 4%, 80%);
 }
+
 button {
-  margin-left: 0.5rem;
-  background: #3f51b5;
-  color: white;
+  background-color: rgb(98, 135, 166);
   border: none;
-  border-radius: 4px;
-  padding: 0 1.5rem;
+  color: aliceblue;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(127, 157, 182);
+}
+
+textarea {
+ padding: 0.8rem 1rem;
+ border-radius: 0.5rem;
+ border: 1.5px solid hsl(0, 4%, 80%);
+}
+
+span {
+  font-size: 0.8rem;
+  color: hsl(0, 1%, 47%);
+  cursor: pointer;
+}
+
+span:hover {
+  color: hsl(0, 1%, 20%);
+}
+
+select {
+  margin-right: 0.3rem;
+  border-radius: 0.5rem;
 }
