--- a/src/app/components/todo-list/todo-list.html
+++ b/src/app/components/todo-list/todo-list.html
@@ -7,6 +7,7 @@
 >
   @for (todo of todos(); track todo.id; let i = $index) {
   <li
+    (click)="selectTodo.emit(todo.id)"
     cdkDrag
     [cdkDragData]="todo"
     [cdkDragBoundary]="todoList"
