add tabs for todo list

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,8 +8,8 @@
   }
   <div class="container">
     <h1>Angular 20 Todo App</h1>
-    <!-- <todo-form (todoAdd)="addTodo($event)" /> -->
     <todo-form (loadTodos)="loadTodos()" />
+    <tabs [activeTabInput]="activeTab()" (setActiveTab)="setActiveTab($event)" />
     <todo-list
       [todos]="todos()"
       (toggle)="toggleTodo($event)"
