--- a/src/app/components/todo-list/todo-list.css
+++ b/src/app/components/todo-list/todo-list.css
@@ -34,6 +34,12 @@ span {
   flex-grow: 1;
 }
 
+span.tag {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: hsl(240, 36%, 43%);
+}
+
 input {
   padding: 0.5rem 0.8rem;
   border-radius: 0.3rem;
@@ -69,34 +75,3 @@ small {
   text-align: center;
   color: #888;
 }
-
-
-
-/* 
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  background: white;
-  padding: 0.75rem;
-  display: flex;
-  align-items: center;
-  max-width: 100%;
-}
-
-.cdk-drag-placeholder {
-  background: #f0f0f0;
-  border: 2px dashed #ccc;
-  opacity: 0.8;
-} */
