--- a/src/app/components/todo-form/todo-form.css
+++ b/src/app/components/todo-form/todo-form.css
@@ -50,4 +50,9 @@ span:hover {
 select {
   margin-right: 0.3rem;
   border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+option {
+  cursor: pointer;
 }
