--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,7 +1,7 @@
 .container {
   width: 600px;
   margin: 2rem;
-  margin-top: 8rem;
+  margin-top: 4rem;
   padding: 1rem;
   background: white;
   border-radius: 8px;
@@ -24,4 +24,11 @@ h1 {
   border-radius: 0.5rem;
   border: 1.5px solid hsl(0, 4%, 80%);
   padding: 0.5rem 1rem;
+}
+
+.view-button {
+  text-align: end;
+  padding-bottom: 1rem;
+  color: rgb(124, 124, 124);
+  cursor: pointer;
 }
