--- a/src/app/components/todo-list/todo-list.css
+++ b/src/app/components/todo-list/todo-list.css
@@ -7,6 +7,7 @@ ul.list {
 
 ul.grid {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 0.5rem;
   list-style: none;
@@ -35,6 +36,7 @@ li.list {
 
 li.grid {
   padding: 0.5rem;
+  min-width: 10rem;
   display: flex;
   gap: 0.5rem;
   flex-direction: column;
@@ -110,10 +112,3 @@ small {
   color: #888;
 }
 
-
-.view-button {
-  text-align: end;
-  padding: 0.5rem;
-  color: rgb(124, 124, 124);
-  cursor: pointer;
-}
