--- a/src/app/components/todo-form/todo-form.css
+++ b/src/app/components/todo-form/todo-form.css
@@ -15,26 +15,31 @@ input {
   padding: 0.8rem 1rem;
   margin-right: 0.3rem;
   border-radius: 0.5rem;
-  border: 1.5px solid hsl(0, 4%, 80%);
+  color: var(--color-text);
+  border: 1.5px solid var(--color-gray-300);
+}
+
+input::placeholder {
+  color: var(--color-placeholder);
 }
 
 button {
-  background-color: rgb(98, 135, 166);
+  background-color: var(--color-primary);
   border: none;
-  color: aliceblue;
+  color: var(--color-gray-100);
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: rgb(127, 157, 182);
+  background-color: var(--color-primary-light)
 }
 
 textarea {
- padding: 0.8rem 1rem;
- border-radius: 0.5rem;
- border: 1.5px solid hsl(0, 4%, 80%);
+  padding: 0.8rem 1rem;
+  border-radius: 0.5rem;
+  border: 1.5px solid hsl(0, 4%, 80%);
 }
 
 span {
@@ -50,7 +55,10 @@ span:hover {
 select {
   margin-right: 0.3rem;
   border-radius: 0.5rem;
+  padding-left: 0.2rem;
   cursor: pointer;
+  border: solid 1px var(--color-gray-300);
+  color: var(--color-placeholder);
 }
 
 option {
