--- a/src/app/components/todo-list/todo-list.css
+++ b/src/app/components/todo-list/todo-list.css
@@ -20,18 +20,22 @@ li.list {
   display: flex;
   align-items: center;
   padding: 0.75rem;
-  border-bottom: 1px solid #eee;
-  background: white;
+  border-bottom: 1px solid var(--color-gray-200);
+  background: var(--color-bg-container);
   /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
   &.completed span:not(.drag-handle) {
     text-decoration: line-through;
-    color: #888;
+    color: var(--color-gray-400)
   }
   cursor: pointer;
   /* &.cdk-drag-dragging {
     transition: none;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   } */
+}
+
+li.list:hover {
+  background-color: var(--color-bg);
 }
 
 li.grid {
@@ -42,11 +46,12 @@ li.grid {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgb(231, 228, 228);
+  border: 1px solid var(--color-gray-200);
+  box-shadow: 0 1px 2px var(--color-gray-300);
   border-radius: 0.5rem;
   &.completed h4:not(.drag-handle) {
     text-decoration: line-through;
-    color: #888;
+    color: var(--color-gray-400)
   }
   cursor: pointer;
 }
@@ -70,10 +75,15 @@ span {
   flex-grow: 1;
 }
 
+h4 {
+  color: var(--color-text);
+  font-weight: 500;
+}
+
 span.tag {
   font-size: 0.8rem;
   font-weight: 600;
-  color: hsl(240, 36%, 43%);
+  color: var(--color-primary);
 }
 
 input {
@@ -87,28 +97,27 @@ form {
   margin-right: 1.8rem;
 }
 
+input {
+  cursor: pointer;
+}
+
 small {
-  color: #666;
+  color: var(--color-placeholder);
   margin-right: 1rem;
 }
 .close{
   background: transparent;
   border: none;
-  color: #f44336;
+  color: var(--color-accent);
   font-size: 1.5rem;
   cursor: pointer;
 }
 
-.edit{
-  background: transparent;
-  border: none;
-  color: gray;
-  font-size: 0.9rem;
-  cursor: pointer;
-}
-
 .empty {
-  text-align: center;
-  color: #888;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  color: var(--color-placeholder);
 }
 
