--- a/src/app/tabs/tabs.css
+++ b/src/app/tabs/tabs.css
@@ -2,17 +2,15 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border-bottom: 1px solid rgb(224, 222, 222);
+  border-bottom: 2px solid var(--color-gray-200);
 }
 
 .tab-item {
-  color: hsl(0, 0%, 28%);
+  color: var(--color-placeholder);
   cursor: pointer;
   padding-bottom: 0.8rem;
-  transition: all;
-  transition-duration: 500ms;
 }
 
 .active {
-  border-bottom: 1px solid rgb(80, 114, 165);
+  border-bottom: 2px solid var(--color-primary);
 }
