--- a/src/app/components/todo-form/todo-form.html
+++ b/src/app/components/todo-form/todo-form.html
@@ -13,7 +13,10 @@
       <option value="shopping">shopping</option>
       <option value="reminder">reminder</option>
     </select>
-    <button type="submit">Add</button>
+    <button type="submit">
+      <span class="material-symbols-outlined add-icon"> add </span>
+      <span class="button-text">add todo</span>
+    </button>
   </div>
   @if (isDescOpen()) {
   <textarea
