--- a/src/app/components/todo-form/todo-form.css
+++ b/src/app/components/todo-form/todo-form.css
@@ -29,8 +29,12 @@ button {
   border: none;
   color: var(--color-gray-100);
   border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 0 0.8rem;
+  gap: 0.2rem;
 }
 
 button:hover {
@@ -48,10 +52,10 @@ span {
   color: hsl(0, 1%, 47%);
   cursor: pointer;
 }
-
+/* 
 span:hover {
   color: hsl(0, 1%, 20%);
-}
+} */
 
 select {
   margin-right: 0.3rem;
@@ -64,4 +68,10 @@ select {
 
 option {
   cursor: pointer;
+}
+
+
+.add-icon {
+  font-size: 20px;
+  color: aliceblue;
 }
