--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
   --color-gray-300: hsl(210, 11%, 80%);
   --color-gray-400: hsl(210, 11%, 71%);
   --color-gray-500: hsl(210, 11%, 50%);
+  --color-gray-600: hsl(210, 11%, 35%);
   --color-gray-900: hsl(210, 11%, 15%);
 
   /* Semantic names */
