update font family and primary color

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
   />
   }
   <div class="container">
-    <h1>Angular 20 Todo App</h1>
+    <h1>Angular Todo App</h1>
     <todo-form (loadTodos)="loadTodos()" />
     <div
       (click)="view.set(view() === 'grid' ? 'list' : 'grid')"
