--- a/src/app/app.css
+++ b/src/app/app.css
@@ -8,9 +8,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 h1 {
+  font-family: "Roboto", sans-serif;
   text-align: center;
   margin-bottom: 4rem;
-  background: linear-gradient(to right, var(--color-primary), hsl(325, 60%, 64%));
+  background: linear-gradient(to right, var(--color-primary), hsl(201, 81%, 64%));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
