--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,18 @@
 @import "@angular/cdk/overlay-prebuilt.css";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+.roboto {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
 
 :root {
   box-sizing: border-box;
   /* Base color palette */
-  --color-primary: hsl(0, 58%, 56%);
-  --color-primary-light: hsl(0, 58%, 60%);
-  --color-secondary: hsl(145, 63%, 49%);
+  --color-primary: hsl(228, 68%, 56%);
+  --color-primary-light: hsl(228, 68%, 60%);
   --color-accent: hsl(6, 78%, 57%);
 
   /* Neutral shades */
@@ -26,7 +33,7 @@
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Roboto", sans-serif;
   background: var(--color-bg);
   margin: 0;
   padding: 0;
@@ -44,7 +51,6 @@ body {
   display: flex;
   align-items: center;
 }
-
 
 .button-text {
   color: var(--color-bg-container);
